fixed log overflow

--- a/style.css
+++ b/style.css
@@ -151,6 +151,10 @@ button:hover {
 }
 
 /* Table */
+.workout-log-box {
+  overflow-x: auto;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -164,6 +168,7 @@ th, td {
   border: 1px solid #444;
   padding: 10px;
   text-align: center;
+  white-space: nowrap;
 }
 th {
   background: #23262f;
